--- a/Nowy folder/img_prepare.ipynb
+++ b/Nowy folder/img_prepare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def normalize_image(image, fold_values, id_patch_to_fold,parcel_id_nb):\n",
-    "        bands=[0, 1, 2, 7, 8, 9]\n",
+    "        bands=[0, 1, 2,3,4,5,6, 7, 8, 9]\n",
     "        normalized_image = np.zeros_like(image, dtype=np.float32)\n",
-    "        for channel in range(6):  # 3x6 kanałów\n",
+    "        for channel in range(10):  # 3x6 kanałów\n",
     "            # print(image[0,0:9,0:9])            \n",
     "            normalized_image[:, :, channel] = (image[:, :, channel] - fold_values[id_patch_to_fold[parcel_id_nb]]['mean'][bands[channel]]) / fold_values[id_patch_to_fold[parcel_id_nb]]['std'][bands[channel]]\n",
-    "            normalized_image[:, :, channel+6] = (image[:, :, channel+6] - fold_values[id_patch_to_fold[parcel_id_nb]]['mean'][bands[channel]]) / fold_values[id_patch_to_fold[parcel_id_nb]]['std'][bands[channel]]\n",
-    "            normalized_image[:, :, channel+12] = (image[:, :, channel+12] - fold_values[id_patch_to_fold[parcel_id_nb]]['mean'][bands[channel]]) / fold_values[id_patch_to_fold[parcel_id_nb]]['std'][bands[channel]]\n",
+    "            # normalized_image[:, :, channel+6] = (image[:, :, channel+6] - fold_values[id_patch_to_fold[parcel_id_nb]]['mean'][bands[channel]]) / fold_values[id_patch_to_fold[parcel_id_nb]]['std'][bands[channel]]\n",
+    "            # normalized_image[:, :, channel+12] = (image[:, :, channel+12] - fold_values[id_patch_to_fold[parcel_id_nb]]['mean'][bands[channel]]) / fold_values[id_patch_to_fold[parcel_id_nb]]['std'][bands[channel]]\n",
     "            # print(normalized_image[0,0:9,0:9]) \n",
     "            # dupamatrix=normalized_image[0,0:9,0:9]\n",
     "            \n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,15 +154,18 @@
     "\n",
     "                new_file_name=f\"{prefix}_{xxx}_{yyy}_merged.tif\"\n",
     "                # np.save(os.path.join(save_path, new_file_name), data)\n",
-    "                img1=img_transposition(data)\n",
-    "                img2=normalize_image(img1,fold_values,id_patch_to_fold,parcel_id_nb)\n",
+    "                # img1=img_transposition(data)\n",
+    "                img1=data[1,:,:,:]\n",
+    "                img11 = np.transpose(img1, (1, 2, 0))\n",
+    "                img2=normalize_image(img11,fold_values,id_patch_to_fold,parcel_id_nb)\n",
     "                # img2=img1\n",
     "\n",
     "                \n",
-    "                if upscaling_img:\n",
-    "                    imgscal=cv2.resize(img2,size,interpolation=cv2.INTER_LANCZOS4)\n",
-    "                else:\n",
-    "                    imgscal=resize_img(img2,size)\n",
+    "                # if upscaling_img:\n",
+    "                #     imgscal=cv2.resize(img2,size,interpolation=cv2.INTER_LANCZOS4)\n",
+    "                # else:\n",
+    "                #     imgscal=resize_img(img2,size)\n",
+    "                imgscal=img2\n",
     "                # print(imgscal.shape)\n",
     "                # tifffile.imwrite(os.path.join(save_path, new_file_name), img1)\n",
     "                # cv2.imwrite(os.path.join(save_path, new_file_name + \".tif\"), img1.astype(np.int16))\n",
@@ -213,11 +216,13 @@
     "                new_mask_name=f\"{prefix}_{xxx}_{yyy}.mask.tif\"\n",
     "                # np.save(os.path.join(save_path, new_mask_name), extracted_layer) \n",
     "                \n",
-    "                if upscaling_img:\n",
-    "                    maskscal=cv2.resize(reduced_mask,size,interpolation=cv2.INTER_NEAREST)\n",
-    "                else:\n",
+    "                # if upscaling_img:\n",
+    "                #     maskscal=cv2.resize(reduced_mask,size,interpolation=cv2.INTER_NEAREST)\n",
+    "                # else:\n",
     "\n",
-    "                    maskscal=resize_img(reduced_mask,size)\n",
+    "                #     maskscal=resize_img(reduced_mask,size)\n",
+    "\n",
+    "                maskscal=reduced_mask\n",
     "\n",
     "                maskscal_str=maskscal.astype(np.int16)\n",
     "\n",
@@ -245,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +258,7 @@
     "\n",
     "dataset_path=r'F:\\mgr_datasets\\PASTIS\\DATA_S2'\n",
     "mask_path=r'F:\\mgr_datasets\\PASTIS\\ANNOTATIONS'\n",
-    "save_path=r'F:\\mgr_datasets\\multi_newclass'\n",
+    "save_path=r'F:\\mgr_datasets\\multi_newclass_noproces'\n",
     "# val_set_path=r'F:\\mgr_datasets\\multimoj\\validation_chips'\n",
     "json_path=r'F:\\mgr_datasets\\PASTIS\\NORM_S2_patch.json'\n",
     "geojson_path=r'F:\\mgr_datasets\\PASTIS\\metadata.geojson'"
@@ -261,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -354,17 +359,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_pth=r'F:\\mgr_datasets\\multismall_newclass\\training_chips\\chip_001_10.mask.tif'\n",
+    "img_pth=r'F:\\mgr_datasets\\multi_newclass_noproces\\training_chips\\chip_001_10_merged.tif'\n",
     "img=tifffile.imread(img_pth)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
