--- a/class_weights.ipynb
+++ b/class_weights.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,33 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Klasa 0: 9219318 wystąpień\n",
-      "Klasa 1: 17760950 wystąpień\n",
-      "Klasa 2: 6591864 wystąpień\n",
-      "Klasa 3: 8669221 wystąpień\n",
-      "Klasa 4: 1957130 wystąpień\n",
+      "Klasa 0: 11399470 wystąpień\n",
+      "Klasa 1: 17768757 wystąpień\n",
+      "Klasa 2: 8551902 wystąpień\n",
+      "Klasa 3: 8673157 wystąpień\n",
+      "Klasa 4: 1033720 wystąpień\n",
       "Klasa 5: 1676721 wystąpień\n",
-      "Klasa 6: 610543 wystąpień\n",
+      "Klasa 6: 610730 wystąpień\n",
       "Klasa 7: 932940 wystąpień\n",
       "Klasa 8: 2725008 wystąpień\n",
       "Klasa 9: 788181 wystąpień\n",
       "Klasa 10: 735117 wystąpień\n",
       "Klasa 11: 1015481 wystąpień\n",
-      "Klasa 12: 5617606 wystąpień\n",
-      "Klasa 13: 38840656 wystąpień\n"
+      "Klasa 12: 2428988 wystąpień\n",
+      "Klasa 13: 38850740 wystąpień\n"
      ]
     }
    ],
    "source": [
     "# Ścieżka do katalogu z maskami TIFF\n",
-    "dir = r'F:\\mgr_datasets\\multimoj\\training_chips'\n",
+    "dir = r'F:\\mgr_datasets\\multi_newclass\\training_chips'\n",
     "\n",
     "# Słowo kluczowe, które występuje w nazwach plików mask\n",
     "keyword = 'mask'\n",
@@ -82,27 +82,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Klasa 0: Waga = 0.270093\n",
-      "Klasa 1: Waga = 0.140199\n",
-      "Klasa 2: Waga = 0.377749\n",
-      "Klasa 3: Waga = 0.287231\n",
-      "Klasa 4: Waga = 1.272306\n",
-      "Klasa 5: Waga = 1.485083\n",
-      "Klasa 6: Waga = 4.078450\n",
-      "Klasa 7: Waga = 2.669056\n",
-      "Klasa 8: Waga = 0.913784\n",
-      "Klasa 9: Waga = 3.159260\n",
-      "Klasa 10: Waga = 3.387310\n",
-      "Klasa 11: Waga = 2.452108\n",
-      "Klasa 12: Waga = 0.443262\n",
-      "Klasa 13: Waga = 0.064110\n"
+      "Klasa 0: Waga = 0.135443\n",
+      "Klasa 1: Waga = 0.086893\n",
+      "Klasa 2: Waga = 0.180542\n",
+      "Klasa 3: Waga = 0.178017\n",
+      "Klasa 4: Waga = 1.493609\n",
+      "Klasa 5: Waga = 0.920829\n",
+      "Klasa 6: Waga = 2.528079\n",
+      "Klasa 7: Waga = 1.654955\n",
+      "Klasa 8: Waga = 0.566594\n",
+      "Klasa 9: Waga = 1.958907\n",
+      "Klasa 10: Waga = 2.100310\n",
+      "Klasa 11: Waga = 1.520436\n",
+      "Klasa 12: Waga = 0.635645\n",
+      "Klasa 13: Waga = 0.039741\n"
      ]
     }
    ],
@@ -114,15 +114,46 @@
     "    return class_weights\n",
     "\n",
     "# Liczba wystąpień każdej klasy\n",
-    "class_occurrences = np.array([9219318, 17760950, 6591864, 8669221, 1957130, 1676721, 610543, 932940, 2725008, 788181, 735117, 1015481, 5617606, 38840656])\n",
+    "# class_occurrences = np.array([9219318, 17760950, 6591864, 8669221, 1957130, 1676721, 610543, 932940, 2725008, 788181, 735117, 1015481, 5617606, 38840656])\n",
     "\n",
     "# Obliczenie wag klas\n",
     "class_weights = calculate_class_weights(class_occurrences)\n",
-    "class_weights=class_weights*21\n",
+    "class_weights=class_weights*14\n",
     "\n",
     "# Wydrukowanie wyników\n",
     "for class_index, weight in enumerate(class_weights):\n",
     "    print(f'Klasa {class_index}: Waga = {weight:.6f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.135443,\n",
+      "0.086893,\n",
+      "0.180542,\n",
+      "0.178017,\n",
+      "1.493609,\n",
+      "0.920829,\n",
+      "2.528079,\n",
+      "1.654955,\n",
+      "0.566594,\n",
+      "1.958907,\n",
+      "2.100310,\n",
+      "1.520436,\n",
+      "0.635645,\n",
+      "0.039741,\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _, weight in enumerate(class_weights):\n",
+    "    print(f'{weight:.6f},')"
    ]
   }
  ],
